--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@pnp/odata": "^2.15.0",
     "@pnp/sp": "^4.7.0",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.12.0",
+    "motion": "^11.12.0",
     "pptxgenjs": "^3.12.0",
     "pspdfkit": "^2024.8.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-doc-viewer": "^0.1.14",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
